# mdspan_testing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
img/: reporter-camera.ppm
include/: image.h  layout_index_calculators.h  layout_proxy.h  ppm.h
src/: example_image_ops.cpp  image.h  layout_index_calculators.h  layout_proxy.h  main.cpp  ppm.h  wrap_mdspan.h
src/common/: CMakeLists.txt
src/common/inc/quxflux/common/: concepts.h
src/custom_accessor/: CMakeLists.txt
src/custom_accessor/inc/quxflux/custom_accessor/: accessor.h  restrict.h
src/custom_accessor/src/: custom_accessor.cpp
src/image_ops/: CMakeLists.txt
src/image_ops/inc/quxflux/image_ops/: image.h  layout_proxy.h  ppm.h
src/image_ops/src/: image_ops.cpp  main.cpp
src/mmap_accessor/: CMakeLists.txt
src/mmap_accessor/inc/quxflux/mmap_accessor/: mmap_accessor.h
src/mmap_accessor/src/: main.cpp  write_mdspan.h
